--- a/app/src/main/res/layout/fragment_training.xml
+++ b/app/src/main/res/layout/fragment_training.xml
@@ -121,7 +121,7 @@
                     android:text="@string/send_request"
                     android:textSize="@dimen/_14ssp"
                     app:cornerRadius="@dimen/_15sdp"
-                    android:onClick="@{()->viewModel.sendRequest()}"
+                    android:onClick="@{()->viewModel.validateAndSendRequest()}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/places_type_spinner_card"
