--- a/app/src/main/res/layout/fragment_sell_product.xml
+++ b/app/src/main/res/layout/fragment_sell_product.xml
@@ -69,8 +69,7 @@
                         android:layout_marginHorizontal="@dimen/_32sdp"
                         android:layout_marginTop="@dimen/_12sdp"
                         android:hint="@string/amount"
-                        app:boxStrokeErrorColor="?attr/colorError"
-                        app:errorIconDrawable="@drawable/ic_error"                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/product_type_text_layout">
 
@@ -92,8 +91,6 @@
                         android:layout_marginHorizontal="@dimen/_32sdp"
                         android:layout_marginTop="@dimen/_28sdp"
                         android:hint="@string/product_type"
-                        app:boxStrokeErrorColor="?attr/colorError"
-                        app:errorIconDrawable="@drawable/ic_error"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/add_image_tv">
@@ -116,8 +113,7 @@
                         android:layout_marginHorizontal="@dimen/_32sdp"
                         android:layout_marginTop="@dimen/_12sdp"
                         android:hint="@string/price"
-                        app:boxStrokeErrorColor="?attr/colorError"
-                        app:errorIconDrawable="@drawable/ic_error"                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/address_text_layout">
@@ -140,8 +136,7 @@
                         android:layout_marginHorizontal="@dimen/_32sdp"
                         android:layout_marginTop="@dimen/_12sdp"
                         android:hint="@string/address"
-                        app:boxStrokeErrorColor="?attr/colorError"
-                        app:errorIconDrawable="@drawable/ic_error"                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/amount_text_layout">
 
@@ -171,7 +166,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_8sdp"
-                        android:text="@={viewModel.productionDate}"                        android:textSize="@dimen/_15ssp"
+                        android:text="@={viewModel.productionDate}"
+                        android:textSize="@dimen/_15ssp"
                         app:layout_constraintBottom_toBottomOf="@+id/date"
                         app:layout_constraintEnd_toStartOf="@+id/date"
                         app:layout_constraintStart_toStartOf="parent"
@@ -182,10 +178,10 @@
                         android:layout_width="@dimen/_60sdp"
                         android:layout_height="@dimen/_60sdp"
                         android:layout_marginStart="4dp"
-                        android:clickable="true"
-                        android:focusable="true"
                         android:layout_marginTop="16dp"
+                        android:clickable="true"
                         android:contentDescription="@string/todo"
+                        android:focusable="true"
                         android:padding="8dp"
                         android:src="@drawable/date_picker"
                         app:layout_constraintEnd_toEndOf="@+id/price_text_layout"
