--- a/app/src/main/res/layout/fragment_otp_auth.xml
+++ b/app/src/main/res/layout/fragment_otp_auth.xml
@@ -9,8 +9,13 @@
             name="user"
             type="com.example.rafik.domian.entity.User" />
     </data>
-
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.registration.OtpAuthFrag">
@@ -127,4 +132,6 @@
             app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
+
 </layout>
