--- a/app/src/main/res/layout/fragment_otp_auth.xml
+++ b/app/src/main/res/layout/fragment_otp_auth.xml
@@ -8,6 +8,9 @@
         <variable
             name="user"
             type="com.example.rafik.domian.entity.User" />
+        <variable
+            name="viewModel"
+            type="com.example.rafik.viewModel.LoginViewModel" />
     </data>
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -91,14 +94,27 @@
             android:id="@+id/tryAgain"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_16sdp"
+            android:layout_marginTop="@dimen/_8sdp"
             android:background="@drawable/round3_button"
             android:text="@string/send_another_code"
-            android:textColor="@color/green"
+            tools:textColor="@color/green"
             android:textSize="@dimen/_15ssp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/otp_view" />
+
+        <TextView
+            android:id="@+id/timerText"
+            android:layout_width="wrap_content"
+            android:layout_marginTop="@dimen/_4sdp"
+            android:layout_height="wrap_content"
+            android:text="@{viewModel.timerText}"
+            android:textSize="@dimen/_15ssp"
+            tools:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="@+id/tryAgain"
+            app:layout_constraintStart_toStartOf="@+id/tryAgain"
+            app:layout_constraintTop_toBottomOf="@+id/tryAgain"
+            tools:text="60" />
 
         <com.apachat.loadingbutton.core.customViews.CircularProgressButton
             android:id="@+id/idBtnVerify"
@@ -106,14 +122,13 @@
             android:layout_gravity="center_horizontal"
             android:background="@drawable/login_button_bk"
             android:enabled="false"
+            android:layout_marginTop="@dimen/_16sdp"
             android:text="@string/verify_code"
             android:textColor="@color/white"
             app:initialCornerAngle="27dp"
-            app:layout_constraintBottom_toTopOf="@+id/img_hexagon2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/otp_view"
-            app:layout_constraintVertical_bias="0.7"
+            app:layout_constraintTop_toBottomOf="@+id/timerText"
             app:spinning_bar_color="#FFF"
             app:spinning_bar_padding="6dp"
             app:spinning_bar_width="4dp" />
