--- a/app/src/main/res/layout/fragment_organic_fertilizer.xml
+++ b/app/src/main/res/layout/fragment_organic_fertilizer.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.rafik.ui.organic_fertilizer.OrganicFertilizerViewModel" />
+            type="com.fertilizers.rafik.ui.organic_fertilizer.OrganicFertilizerViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
