--- a/app/src/main/res/layout/fragment_sell_product.xml
+++ b/app/src/main/res/layout/fragment_sell_product.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.rafik.ui.sell_product.SellProductViewModel" />
+            type="com.fertilizers.rafik.ui.sell_product.SellProductViewModel" />
 
     </data>
 
